fixed alignment for dropdowns

--- a/client/src/Components/css/graph.css
+++ b/client/src/Components/css/graph.css
@@ -5,7 +5,7 @@
 }
 
 .dropDownIndex {
-  margin-left: 570px;
+  margin-left: 420px;
   background-color: #f2f3f4;
 }
 
@@ -15,4 +15,5 @@
 
 .dropDownType {
   background-color: #f2f3f4;
+  margin-left: 15px;
 }
